<resources>
    <string name="app_name">cycleDairy</string>
    <string name="bottom_bar_now">NOW</string>
    <string name="bottom_bar_list">LIST</string>
    <string name="bottom_bar_new">NEW</string>
    <string name="bottom_bar_ok">OK</string>
    <string name="bottom_bar_cancel">CANCEL</string>

    <string name="new_dairy_place_now">출발지</string>
    <string name="new_dairy_place_to">목적지</string>
    <string name="new_dairy_search">검색</string>

    <string name="member_login_id">ID</string>
    <string name="member_login_password">PASSWORD</string>
    <string name="member_login_login">Login</string>
</resources>
