<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".activity.NewDairyActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="9">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center"
                android:layout_weight="2"
                tools:ignore="NestedWeights">
            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:gravity="center"
                      android:text="@string/app_name"
                      android:textSize="40sp"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="9"
                android:orientation="vertical">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="4"
                    android:orientation="vertical"
                    android:gravity="center">
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center">
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/new_dairy_place_now"
                            android:textSize="30sp"
                            android:id="@+id/tv_new_dairy_place_now"/>
                    <EditText
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:textSize="15sp"
                            android:autofillHints="@string/new_dairy_place_now"
                            android:hint="@string/new_dairy_place_now"
                            android:inputType="text"
                            android:id="@+id/edt_new_dairy_place_now"/>
                    <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/new_dairy_search"
                            android:textSize="30sp"
                            android:id="@+id/btn_new_dairy_place_now"/>
                </LinearLayout>
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center">
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/new_dairy_place_to"
                            android:textSize="30sp"
                            android:id="@+id/tv_new_dairy_place_to"/>
                    <EditText
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:textSize="15sp"
                            android:autofillHints="@string/new_dairy_place_to"
                            android:hint="@string/new_dairy_place_to"
                            android:inputType="text"
                            android:id="@+id/edt_new_dairy_place_to"/>
                    <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/new_dairy_search"
                            android:textSize="30sp"
                            android:id="@+id/btn_new_dairy_place_to"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="6">
                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/new_dairy_map_view"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1">
        <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:gravity="center"
                android:text="@string/bottom_bar_ok"
                android:background="@color/colorOk"
                android:id="@+id/tv_new_dairy_ok"
                android:textSize="30sp" tools:ignore="NestedWeights"/>
        <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:gravity="center"
                android:text="@string/bottom_bar_cancel"
                android:background="@color/colorCancel"
                android:id="@+id/tv_new_dairy_cancel"
                android:textSize="30sp"/>
    </LinearLayout>

</LinearLayout>
